# Rare-Disease-Social-Media-Project

./: .gitattributes  .gitignore  LICENSE  README.md  _ctfidf.py  convert_subreddit.py  get_comment_data.py  get_post_data.py  identify_subreddits.py  lda_model.py  match_gard_subreddit.py  preprocess.py  pyproject.toml  query_gard.py  setup.py  top2vec_model.py  topic_tools.py
.github/workflows/: codeql.yml  python-publish.yml
app/: Dockerfile  README.md  requirements.txt
app/code/: main.py
explore-app/: README.md
identify_subreddits/: Map.py  Map_Results.py  false_postives.py  new_identify_subreddits.py
manuscript/: EhlersDanlosCaseStudy.ipynb  README.md  descriptive_stats_of_reddit_data.ipynb  gard_search.py  investigate_rare_disease_reddit_stats.ipynb  rd_subreddits_w_created_results.tildesv  rd_subreddits_w_created_results.tsv  rd_subreddits_w_created_results_descriptive_stats.csv
manuscript/rare_disease_embeddings/: Train_GARD_name_embeddings.py  create_training_dataset.ipynb
mapper/: LICENSE  Map.py  README.md  new_identify_subreddits.py  requirements.txt  variables.py
mapper/data/: subreddit_GARD_matches.json
mapper/data/input/: neo4j_rare_disease_list.json
mapper/doc/: Mapper_Description.docx  UML_Mapper.drawio
project_data/: neo4j_rare_disease_list.json
project_data/comments/: ADPKD_comments.json  ALS_comments.json  AcousticNeuroma_comments.json  AddisonsDisease_comments.json  Albinism_comments.json  BPPV_comments.json  Behcets_comments.json  BellsPalsy_comments.json  Blind_comments.json  BrittleBones_comments.json  CLL_Leukemia_comments.json  CML_comments.json  CMT_comments.json  CRPS_comments.json  CVID_comments.json  CaudaEquinaSyndrome_comments.json  CerebellarHypoplasia_comments.json  CysticFibrosis_comments.json  Dermatographia_comments.json  DisabilityFitness_comments.json  DupuytrenDisease_comments.json  EctopicSupportGroup_comments.json  EosinophilicE_comments.json  Erythromelalgia_comments.json  FND_comments.json  FSHD_comments.json  FinasterideSyndrome_comments.json  G6PD_comments.json  Gastroparesis_comments.json  Hemophilia_comments.json  Huntingtons_comments.json  Hydrocephalus_comments.json  IBD_comments.json  Keratoconus_comments.json  LearningDisabilities_comments.json  MCAS_comments.json  MPN_comments.json  Malaria_comments.json  MastCellDiseases_comments.json  Menieres_comments.json  (+67 more)
project_data/models/ALS/: ALS_all-MiniLM-L6-v2  ALS_doc2vec_eom_0  (+13 more)
project_data/posts/: 22q_posts.json  A1AD_posts.json  ADPKD_posts.json  AcousticNeuroma_posts.json  Albinism_posts.json  AngelmanSyndrome_posts.json  Angioedema_posts.json  Apraxia_posts.json  Autoinflammatory_posts.json  BPPV_posts.json  BeckersNevus_posts.json  Behcets_posts.json  BellsPalsy_posts.json  BrittleBones_posts.json  CADASIL_posts.json  CJD_posts.json  CLL_Leukemia_posts.json  CML_posts.json  CMT_posts.json  CVID_posts.json  CaudaEquinaSyndrome_posts.json  CerebellarHypoplasia_posts.json  ConversionDisorder_posts.json  Cornea_Transplant_posts.json  Cystic_Fibrosis_posts.json  Dengue_Fever_posts.json  Dermatographia_posts.json  Dermographism_posts.json  DisabilityFitness_posts.json  DupuytrenDisease_posts.json  DyspraxiaHub_posts.json  EbsteinsAnomaly_posts.json  EctodermalDysplasia_posts.json  EosinophilicE_posts.json  Erythromelalgia_posts.json  Esophagitis_posts.json  EvansSyndrome_posts.json  FND_posts.json  FSHD_posts.json  FallRiskTheMusical_posts.json  (+123 more)
rdsmproj/: VERSION  __init__.py  preprocess.py  query_gard.py  utils.py
rdsmproj/mapper/: __init__.py
rdsmproj/sm_reddit/: __init__.py  convert_subreddit.py  get_comment_data.py  get_post_data.py
rdsmproj/tm_lda/: __init__.py  _ctfidf.py  lda_model.py  main_legacy.py
rdsmproj/tm_t2v/: __init__.py  main_top2vec.py  top2vec_model.py
topic_modeling/: __init__.py  main_legacy.py  main_top2vec.py  preprocess.py  query_gard.py
topic_modeling/lda_models/: __init__.py  _ctfidf.py  lda_model.py  topic_tools.py
topic_modeling/reddit_scripts/: __init__.py  convert_subreddit.py  get_comment_data.py  get_post_data.py
topic_modeling/top2vec_models/: __init__.py  top2vec_model.py  top2vec_topic_tools.py
topic_modeling/utils/: __init__.py  utils.py  zreader.py
utils/: utils.py
(+6671 files in other folders)
