[build-system]
requires = ["setuptools >= 65.3.0", "wheel >= 0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rdsmproj"
version = "0.0.1"
description = "Set of tools for use in research of rare disease related text."
authors = [
    {name='Bradley Karas', email='bradley.karas@gmail.com'},
    {name='Devon Leadman', email='devon.leadman@axleinfo.com'},
    {name='William Kariampuzha', email='William.Kariampuzha@axleinfo.com'}
]
license = {file = "LICENSE"}
readme = "README.md" 
requires-python = ">=3.7"
keywords = ["Rare diseases",
            "Natural Language Processing",
            "Data Science",
            "Infodemiology",
            "top2vec",
            "NormMap"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas >= 1.4.2"

]

[project.optional-dependencies]
mapper = [
    'nltk >= 3.6.7',
    'spacy >= 3.2.1'
]
tm_t2v = [
    'contractions',
    'gensim >= 4.1.2',
    'matplotlib >= 3.5.1',
    'nltk >= 3.6.5',
    'numpy >= 1.22.3',
    'psutil >= 5.9.0',
    'seaborn >= 0.11.2',
    'top2vec >= 1.0.27',
    'tqdm >= 4.62.3',
    'wordcloud >= 1.8.1'
]
sm_reddit = [
    'pmaw >= 2.1.0',
    'tqdm >= 4.62.3',
    'zstandard >= 0.17.0'
]
tm_lda = [
    'bertopic >= 0.9.4',
    'contractions',
    'gensim >= 4.1.2',
    'hyperopt >= 0.2.7',
    'matplotlib >= 3.5.1',
    'nltk >= 3.6.5',
    'numpy >= 1.22.3',
    'optuna >= 2.10.0',
    'psutil >= 5.9.0',
    'scipy >= 1.7.3',
    'seaborn >= 0.11.2',
    'scikit-learn >= 1.0',
    'tqdm >= 4.62.3',
    'wordcloud >= 1.8.1'
]

[project.urls]
homepage = "https://github.com/ncats/Rare-Disease-Social-Media-Project"
documentation = "https://github.com/ncats/Rare-Disease-Social-Media-Project"
repository = "https://github.com/ncats/Rare-Disease-Social-Media-Project"

[tool.setuptools.packages.find]
exclude=["data"]
